newclay/test/Compiler/Propagation/Fail/RefLocal5/main.clay

define main;
overload main() {
    rvalue x = true;
    return rvalue x;
}

